# puff-trigger

./: .claudeignore  .env.example  .gitignore  README.md  claude.md  considerations.md  pyproject.toml  smoke_detector_project.md
app/: config.py  main.py
app/api/: routes.py
app/audio/: aplay_player.py  interface.py
app/logger/: csv_logger.py  interface.py
app/sensor/: enviro.py  interface.py  mock.py
tests/: test_audio.py  test_logger.py  test_sensor.py
